--- a/tbgp/configs/simple_conf.toml
+++ b/tbgp/configs/simple_conf.toml
@@ -1,13 +1,12 @@
-input_dir = "data-old/eu-email/"
-#input_dir = "data/graphs/epl/"
+input_dir = "data/graphs/ex1/"
 nfa_dir = "data/nfa/ta2.csv"
 debug =    0 # 0  For nothing - 10 for everything
-pattern_type = "cycle_two"
-#pattern_type = "triangles_WOJ"
-#pattern_type = "rectangle_woj"
-#pattern_type = "path2"
+
+pattern_type = "path2"
 #pattern_type = "path3"
 #pattern_type = "path4"
-
+#pattern_type = "cycle_two"
+#pattern_type = "triangles_WOJ"
+#pattern_type = "rectangle_woj"
 
 pattern_size = 2
