--- a/tbgp/configs/simple_conf.toml
+++ b/tbgp/configs/simple_conf.toml
@@ -1,5 +1,5 @@
-input_dir = "data/graphs/epl/"
-nfa_dir = "data/nfa/ta3.csv"
+input_dir = "data/graphs/ex1/"
+nfa_dir = "data/nfa/ta0-4.csv"
 debug =    0 # 0  For nothing - 10 for everything
 
 pattern_type = "path2"
