--- a/tbgp/configs/simple_conf.toml
+++ b/tbgp/configs/simple_conf.toml
@@ -1,6 +1,6 @@
-input_dir = "data/graphs/ex1/"
-nfa_dir = "data/nfa/ta0-4.csv"
-debug =    0 # 0  For nothing - 10 for everything
+input_dir = "data/graphs/epl/"
+nfa_dir = "data/nfa/ta3.csv"
+debug =    1 # 0  For nothing - 10 for everything
 
 pattern_type = "path2"
 #pattern_type = "path3"
