--- a/tbgp/configs/simple_conf.toml
+++ b/tbgp/configs/simple_conf.toml
@@ -1,11 +1,11 @@
-input_dir = "data/graphs/epl/"
-nfa_dir = "data/nfa/ta3.csv"
-debug =    1 # 0  For nothing - 10 for everything
+input_dir = "data/graphs/ex1/"
+nfa_dir = "data/nfa/ta1.csv"
+debug =    0 # 0  For nothing - 10 for everything
 
-pattern_type = "path2"
+#pattern_type = "path2"
 #pattern_type = "path3"
 #pattern_type = "path4"
-#pattern_type = "cycle_two"
+pattern_type = "cycle_two"
 #pattern_type = "triangles_WOJ"
 #pattern_type = "rectangle_woj"
 
