--- a/tbgp/configs/experiments/table1/table1-epl-cycle2.toml
+++ b/tbgp/configs/experiments/table1/table1-epl-cycle2.toml
@@ -1,11 +1,11 @@
-input_dir = "data/graphs/ex1/"
-nfa_dir = "data/nfa/ta2.csv"
+input_dir = "data/graphs/epl/"
+nfa_dir = "data/nfa/ta0-2.csv"
 debug =    0 # 0  For nothing - 10 for everything
 
-#pattern_type = "path2"
+pattern_type = "path2"
 #pattern_type = "path3"
 #pattern_type = "path4"
-pattern_type = "cycle_two"
+#pattern_type = "cycle_two"
 #pattern_type = "triangles_WOJ"
 #pattern_type = "rectangle_woj"
 
