--- a/tbgp/configs/simple_conf.toml
+++ b/tbgp/configs/simple_conf.toml
@@ -1,14 +1,14 @@
 input_dir = "data/graphs/eu-email/"
-nfa_dir = "data/nfa/ta0-4.csv"
+nfa_dir = "data/nfa/ta2.csv"
 #nfa_dir = "data/nfa/nfa-multi-path/ta0-1-4.csv"
 debug =    0# 0  For nothing - 10 for everything
 
-#pattern_type = "path2"
+pattern_type = "path2"
 #pattern_type = "path3"
 #pattern_type = " path4"
 #pattern_type = "cycle_two"
 #pattern_type = "triangles_WOJ"
-pattern_type = "rectangle_woj"
+#pattern_type = "rectangle_woj"
 
 #pattern_type = "instar_2"
 #pattern_type = "instar_3"
@@ -16,4 +16,4 @@ pattern_type = "rectangle_woj"
 #pattern_type = "outstar_3"
 
 
-pattern_size = 4
+pattern_size = 2
