--- a/tbgp/Cargo.toml
+++ b/tbgp/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "tbgp"
 version = "0.1.0"
-authors = ["X"]
-edition = "2018"
+authors = ["amir"]
+edition = "2022"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
